# Retail-Demand-Forecasting-Elasticity-Engine

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_manual_features.ipynb  03_llm_feature_planning.ipynb  04_causal_elasticity_dml.ipynb  05_forecasting_models.ipynb
prompts/: feature_planner_system.txt  feature_planner_user_template.txt
reports/: final_run_report.md
scripts/: run_prepare_data.ps1
src/retail_forecasting/: __init__.py  baselines.py  causal_dml.py  causal_utils.py  cli.py  config.py  data_loading.py  data_validation.py  elasticity.py  evaluation.py  feature_spec.py  features_common.py  features_llm.py  features_manual.py  forecasting.py  forecasting_models.py  io.py  llm_metadata.py  logging_utils.py  ollama_client.py  paths.py  pipeline.py  predict.py  preprocessing.py  reporting.py  schemas.py  tuning.py  utils.py
tests/: test_baselines.py  test_causal_dml.py  test_causal_utils.py  test_cli.py  test_config.py  test_data_loading.py  test_data_validation.py  test_evaluation.py  test_feature_spec.py  test_features_common.py  test_features_llm.py  test_features_manual.py  test_forecasting_models.py  test_ollama_client.py  test_paths.py  test_pipeline.py  test_predict.py  test_preprocessing.py  test_reporting.py  test_schemas.py  test_tuning.py
