[project]
name = "retail-forecasting-engine"
version = "0.1.0"
description = "Local-first retail forecasting and elasticity engine with production quality gates."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "econml",
    "lightgbm",
    "xgboost",
    "optuna",
    "ollama",
    "typer",
    "rich",
    "pydantic-settings",
    "joblib",
    "pyarrow",
    "matplotlib",
    "seaborn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "jupyterlab",
    "ipykernel",
]

[project.scripts]
retail-forecasting-engine = "retail_forecasting.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_forecasting"]

[tool.hatch.build.targets.sdist]
include = [
    "src/retail_forecasting",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=retail_forecasting --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
files = ["src"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
pretty = true

[tool.coverage.run]
branch = true
source = ["src/retail_forecasting"]

[tool.coverage.report]
show_missing = true
skip_covered = true
